<resources>
    <string name="app_name">Treasure Hunting</string>
    <string name="title_quests">Quests</string>
    <string name="title_map">Map</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shr_hint_username">username</string>
    <string name="shr_hint_password">password</string>
    <string name="title_quest">Quest</string>
    <string name="shr_hint_email">email</string>
    <string name="b_sign_in">Sign in</string>
    <string name="b_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="email">Email:</string>
    <string name="points">Points:</string>
    <string name="modify_profile">Modify</string>
    <string name="text_modify_profile">Modify Profile</string>
    <string name="title_suggestion">Suggestion</string>
    <string name="text_send">Send</string>
    <string name="text_hint">Max 250 character</string>
    <string name="b_finish">Finish</string>
    <string name="b_abandon">Abandon</string>
    <string name="b_suggest_change">Suggest change</string>
    <string name="answer">answer</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="b_accept">Accept</string>
</resources>