<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_suggestion"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/text_suggestion"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:lines="10"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginBottom="10dp"
        android:text="@string/text_hint"/>
    <Button
        android:id="@+id/bSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_send"
        />

</LinearLayout>