<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:weightSum="7"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="1">
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@android:drawable/ic_menu_mapmode"
            android:backgroundTint="@color/black"
            android:foregroundTint="@color/black"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:text="Quest name"
            android:textAlignment="center"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/longitude"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text_longitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="24.4"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/latitude"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text_latitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="35.4"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/points"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="5"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_active_quest"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp"
        android:padding="10dp"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            tools:text="LOREM IPSUM ajsdhnkjansdajk \nkjansdjnan akjsndkajn\n ajsda"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view"
                tools:listitem="@layout/rowitem_quest_details_options"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
        </ScrollView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answer_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@android:drawable/ic_menu_help"
            android:hint="@string/answer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bFinish"
            android:layout_width="match_parent"
            android:text="@string/b_finish"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/bAbandon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/b_abandon"
            />

        </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="0dp">
        <Button
            android:id="@+id/bAccept"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/b_accept"
            />
        <Button
            android:id="@+id/bSuggest"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/b_suggest_change"
            />
    </LinearLayout>
</LinearLayout>