<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@drawable/ic_baseline_account_box_24"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:text="Harry Potter"
            android:textAlignment="center"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="email@emil.com"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/points"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="50"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
<Button
    android:id="@+id/bModify"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/modify_profile"
    android:layout_margin="10dp"
    />

</LinearLayout>